<resources>
    <string name="app_name">CastFlow</string>
    <string name="login_title">Login</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="forgot_text">Forgot password</string>
    <string name="signup_text">SignuUp?</string>
    <string name="expense_text">Expense</string>
    <string name="income_text">Income</string>
    <string name="report_text">Report</string>
    <string name="main_text">Main</string>
    <string name="saldo_text">Saldo</string>
    <string name="total_text">Total</string>
    <string name="add_expense_text">Add Expense</string>
    <string name="name_expense_text">Name Expense</string>
    <string name="amount_text">Amount</string>
    <string name="date_text">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="house_text">house</string>
    <string name="medic_text">medic</string>
    <string name="transport_text">transport</string>
    <string name="food_text">food</string>
    <string name="recreation_text">recreation</string>
    <string name="education_text">education</string>
    <string name="clothes_text">clothes</string>
    <string name="communication_text">communication</string>
    <string name="toilet_text">toilet</string>
</resources>
