<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="handler"
            type="phone.nikolas.com.castflow.activity.login.LoginHandler" />

        <variable
            name="viewModel"
            type="phone.nikolas.com.castflow.activity.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_text" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.username}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_text" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@{viewModel.password}" />

            <TextView
                android:id="@+id/forgotPassword"
                style="@style/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/forgot_text"
                android:onClick="@{(view)->handler.onCLickForgotPassword()}"
                />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(view)->handler.onCLickLogin()}"
                android:text="@string/login_title" />

            <TextView
                style="@style/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signup_text"
                android:onClick="@{(view)->handler.onClickSignup()}"
                />
        </LinearLayout>


    </RelativeLayout>


</layout>