<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="handler"
            type="phone.nikolas.com.castflow.activity.addexpense.AddExpenseHandler" />

        <variable
            name="viewModel"
            type="phone.nikolas.com.castflow.activity.addexpense.AddExpenseViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="bottom"
                    android:text="@string/name_expense_text" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="bottom"
                    android:text="@string/amount_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="bottom"
                    android:text="@string/date_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/input_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/input_amount_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/input_date_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_expense_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_expense_text" />

        </LinearLayout>
    </LinearLayout>
</layout>